[gd_scene load_steps=12 format=2]

[ext_resource path="res://SceneTransition.tscn" type="PackedScene" id=1]
[ext_resource path="res://SongSelect.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Menu/New Project.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Menu/gridiguess.png" type="Texture" id=4]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=5]
[ext_resource path="res://Themes/DefaultTheme.tres" type="Theme" id=6]
[ext_resource path="res://Menu/SongSelect.gd" type="Script" id=7]
[ext_resource path="res://Menu/Settings.gd" type="Script" id=8]
[ext_resource path="res://Dead+City.mp3" type="AudioStream" id=9]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

const float timescale = 0.1;
const float rotation = 0.5;


void fragment() {
	vec2 px = UV;
	px.x = mod(px.x + TIME * timescale + UV.y, 1.0);
	px.y = mod(px.y + TIME * timescale + UV.x, 1.0);
	COLOR = textureLod(TEXTURE, px, 0.0);
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[node name="SceneExit" parent="." instance=ExtResource( 1 )]

[node name="BG" type="TextureRect" parent="."]
material = SubResource( 10 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 455.0
margin_top = 17.0
margin_right = 999.0
margin_bottom = 267.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="MenuOptions" type="Control" parent="Main"]
margin_left = 86.0
margin_top = 334.0
margin_right = 403.0
margin_bottom = 530.0

[node name="PlayButton" type="ToolButton" parent="Main/MenuOptions"]
margin_right = 317.0
margin_bottom = 46.0
theme = ExtResource( 6 )
text = "PLAY"
align = 0

[node name="EditorButton" type="ToolButton" parent="Main/MenuOptions"]
margin_top = 50.0
margin_right = 317.0
margin_bottom = 96.0
theme = ExtResource( 6 )
text = "LEVEL EDITOR"
align = 0

[node name="SettingsButton" type="ToolButton" parent="Main/MenuOptions"]
margin_top = 100.0
margin_right = 317.0
margin_bottom = 146.0
theme = ExtResource( 6 )
text = "SETTINGS"
align = 0

[node name="QuitButton" type="ToolButton" parent="Main/MenuOptions"]
margin_top = 150.0
margin_right = 317.0
margin_bottom = 196.0
theme = ExtResource( 6 )
text = "QUIT"
align = 0

[node name="Songs" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="SongList" type="Control" parent="Songs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 198.0
margin_right = -198.0
margin_bottom = -85.0

[node name="Leftward" type="Button" parent="Songs"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 67.0
margin_top = -21.0
margin_right = 71.0
margin_bottom = 21.0
text = "<-"

[node name="Rightward" type="Button" parent="Songs"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -106.0
margin_top = -21.0
margin_right = -73.0
margin_bottom = 21.0
text = "->"

[node name="Buttons" type="HBoxContainer" parent="Songs"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -61.0
margin_right = -24.0
margin_bottom = -19.0
custom_constants/separation = 50
alignment = 2

[node name="ReturnButton" type="Button" parent="Songs/Buttons"]
margin_left = 734.0
margin_right = 862.0
margin_bottom = 42.0
text = "Return"

[node name="PlayButton" type="Button" parent="Songs/Buttons"]
margin_left = 912.0
margin_right = 1005.0
margin_bottom = 42.0
text = "Play"

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Main" type="Control" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="VBoxContainer" parent="Settings/Main"]
margin_left = 88.0
margin_top = 336.0
margin_right = 284.0
margin_bottom = 478.0
custom_constants/separation = 8

[node name="AudioButton" type="Button" parent="Settings/Main/Options"]
margin_right = 198.0
margin_bottom = 42.0
text = "AUDIO"
flat = true
align = 0

[node name="GameplayButton" type="Button" parent="Settings/Main/Options"]
margin_top = 50.0
margin_right = 198.0
margin_bottom = 92.0
text = "GAMEPLAY"
flat = true
align = 0

[node name="ControlsButton" type="Button" parent="Settings/Main/Options"]
margin_top = 100.0
margin_right = 198.0
margin_bottom = 142.0
disabled = true
text = "CONTROLS"
flat = true
align = 0

[node name="ReturnButton" type="Button" parent="Settings/Main/Options"]
margin_top = 150.0
margin_right = 198.0
margin_bottom = 192.0
text = "RETURN"
flat = true
align = 0

[node name="Audio" type="Control" parent="Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Options" type="VBoxContainer" parent="Settings/Audio"]
margin_left = 88.0
margin_top = 288.0
margin_right = 533.0
margin_bottom = 528.0
custom_constants/separation = 8

[node name="VolumeOption" type="VBoxContainer" parent="Settings/Audio/Options"]
margin_right = 445.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="Settings/Audio/Options/VolumeOption"]
margin_right = 445.0
margin_bottom = 38.0
text = "MAIN VOLUME"

[node name="Slider" type="HSlider" parent="Settings/Audio/Options/VolumeOption"]
margin_top = 42.0
margin_right = 445.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MusicOption" type="VBoxContainer" parent="Settings/Audio/Options"]
margin_top = 66.0
margin_right = 445.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="Settings/Audio/Options/MusicOption"]
margin_right = 445.0
margin_bottom = 38.0
text = "MUSIC VOLUME"

[node name="Slider" type="HSlider" parent="Settings/Audio/Options/MusicOption"]
margin_top = 42.0
margin_right = 445.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="SFXOption" type="VBoxContainer" parent="Settings/Audio/Options"]
margin_top = 132.0
margin_right = 445.0
margin_bottom = 190.0

[node name="Label" type="Label" parent="Settings/Audio/Options/SFXOption"]
margin_right = 445.0
margin_bottom = 38.0
text = "SFX VOLUME"

[node name="Slider" type="HSlider" parent="Settings/Audio/Options/SFXOption"]
margin_top = 42.0
margin_right = 445.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ReturnButton" type="Button" parent="Settings/Audio/Options"]
margin_top = 198.0
margin_right = 445.0
margin_bottom = 240.0
text = "RETURN"
flat = true
align = 0

[node name="Gameplay" type="Control" parent="Settings"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 164.0
margin_bottom = 164.0

[node name="Options" type="VBoxContainer" parent="Settings/Gameplay"]
margin_left = 88.0
margin_top = 256.0
margin_right = 533.0
margin_bottom = 364.0
grow_vertical = 0
custom_constants/separation = 8

[node name="ScrollOption" type="VBoxContainer" parent="Settings/Gameplay/Options"]
margin_right = 445.0
margin_bottom = 58.0

[node name="Label" type="Label" parent="Settings/Gameplay/Options/ScrollOption"]
margin_right = 445.0
margin_bottom = 38.0
text = "SCROLL SPEED"

[node name="Slider" type="HSlider" parent="Settings/Gameplay/Options/ScrollOption"]
margin_top = 42.0
margin_right = 445.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="ReturnButton" type="Button" parent="Settings/Gameplay/Options"]
margin_top = 66.0
margin_right = 445.0
margin_bottom = 108.0
text = "RETURN"
flat = true
align = 0

[node name="Buttons" type="HBoxContainer" parent="Settings"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5.0
margin_top = -61.0
margin_right = -24.0
margin_bottom = -19.0
custom_constants/separation = 50
alignment = 2

[node name="ReturnButton" type="Button" parent="Settings/Buttons"]
margin_left = 553.0
margin_right = 827.0
margin_bottom = 42.0
disabled = true
text = "Discard Changes"

[node name="PlayButton" type="Button" parent="Settings/Buttons"]
margin_left = 877.0
margin_right = 1005.0
margin_bottom = 42.0
text = "Return"

[connection signal="menu_change_request" from="Main" to="." method="_on_menu_change_requested"]
[connection signal="pressed" from="Main/MenuOptions/PlayButton" to="Main" method="_on_play_pressed"]
[connection signal="pressed" from="Main/MenuOptions/EditorButton" to="Main" method="_on_editor_pressed"]
[connection signal="pressed" from="Main/MenuOptions/SettingsButton" to="Main" method="_on_settings_pressed"]
[connection signal="pressed" from="Main/MenuOptions/QuitButton" to="Main" method="_on_quit_pressed"]
[connection signal="menu_change_request" from="Songs" to="." method="_on_menu_change_requested"]
[connection signal="play_song_request" from="Songs" to="." method="_on_play_song_requested"]
[connection signal="pressed" from="Songs/Leftward" to="Songs" method="_on_leftward_pressed"]
[connection signal="pressed" from="Songs/Rightward" to="Songs" method="_on_rightward_pressed"]
[connection signal="pressed" from="Songs/Buttons/ReturnButton" to="Songs" method="_on_return_pressed"]
[connection signal="pressed" from="Songs/Buttons/PlayButton" to="Songs" method="_on_play_pressed"]
[connection signal="menu_change_request" from="Settings" to="." method="_on_menu_change_requested"]
[connection signal="pressed" from="Settings/Main/Options/AudioButton" to="Settings" method="_on_audio_pressed"]
[connection signal="pressed" from="Settings/Main/Options/GameplayButton" to="Settings" method="_on_gameplay_pressed"]
[connection signal="pressed" from="Settings/Main/Options/ReturnButton" to="Settings" method="_on_return_pressed"]
[connection signal="pressed" from="Settings/Audio/Options/ReturnButton" to="Settings" method="_on_go_main_pressed"]
[connection signal="drag_ended" from="Settings/Gameplay/Options/ScrollOption/Slider" to="Settings" method="_on_scrool_speed_drag_ended"]
[connection signal="pressed" from="Settings/Gameplay/Options/ReturnButton" to="Settings" method="_on_go_main_pressed"]
[connection signal="pressed" from="Settings/Buttons/ReturnButton" to="Settings" method="_on_return_pressed"]
[connection signal="pressed" from="Settings/Buttons/PlayButton" to="." method="_on_play_pressed"]
